# seal2d

./: .gitignore  .gitmodules  LICENSE  README.md
example/yuusha/: .gitignore  .luacov  makefile
example/yuusha/coverage/: luacov.stats.out
example/yuusha/csrc/: main.c
example/yuusha/proj.android_studio/app/: CMakeLists.txt  android_native_app_glue.c  android_native_app_glue.h  android_native_gl_helper.c  android_native_gl_helper.h  build.gradle  main.c  proguard-rules.pro
example/yuusha/proj.android_studio/app/libs/: CMakeLists.txt  tmp.cpp
example/yuusha/proj.android_studio/app/libs/core/: CMakeLists.txt
example/yuusha/proj.android_studio/app/src/main/: AndroidManifest.xml
example/yuusha/proj.android_studio/app/src/main/assets/res/fonts/: animated.txt
example/yuusha/proj.android_studio/app/src/main/assets/res/images/: anim_pirate.json  skeleton.json  ui.json
example/yuusha/proj.android_studio/app/src/main/assets/res/shaders/: color.vert
example/yuusha/proj.android_studio/app/src/main/assets/scripts/: bootloader.lua  game.lua
example/yuusha/proj.android_studio/app/src/main/assets/scripts/editor/: menu_panel.lua
example/yuusha/proj.android_studio/app/src/main/assets/scripts/tests/game/: stage.lua
example/yuusha/proj.android_studio/app/src/main/assets/scripts/tests/game/samples/: hello_world.lua  sample_common.lua  sprite_test.lua
example/yuusha/proj.android_studio/app/src/main/assets/seal/: engine.lua  sprite.lua
example/yuusha/proj.android_studio/app/src/main/java/com/miyu/seal2d/seal2d/: MainActivity.java
example/yuusha/proj.android_studio/app/src/main/res/layout/: activity_main.xml
example/yuusha/proj.android_studio/app/src/main/res/values/: strings.xml
example/yuusha/proj.ios/: Info.plist
example/yuusha/proj.ios/yuusha-ios/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist  main.m
example/yuusha/proj.ios/yuusha-ios.xcodeproj/: project.pbxproj
example/yuusha/proj.ios/yuushaios.xcodeproj/: project.pbxproj
example/yuusha/proj.mac/native/: main.c
example/yuusha/proj.mac/yuusha.xcodeproj/: project.pbxproj
example/yuusha/proj.win32/: Seal2D.c  Seal2D.sln  Seal2D.vcxproj  Seal2D.vcxproj.filters  main.c  seal.sln  seal.vcxproj  seal.vcxproj.filters  stdafx.c
example/yuusha/raw/: makefile
example/yuusha/raw/fonts/: animated.GlyphProject  makefile
example/yuusha/raw/game/: main.json
example/yuusha/raw/images/: makefile
example/yuusha/raw/scores/: makefile
example/yuusha/raw/spine_anim/: skeleton.atlas  skeleton.json
example/yuusha/raw/unpack/: makefile
example/yuusha/res/: atlas_example.lua  ui.json
example/yuusha/res/code/: config  seal.consts  seal.engine  seal.sprite  seal.sprite_old  (+2 more)
example/yuusha/scripts/: bootloader.lua  config.lua  game.lua  startup.lua
example/yuusha/spine_projects/: spine-example.spine
example/yuusha/tools/: install_dep.sh
libs/SDL2-2.0.4/test/: testsprite2.c
libs/freetype-2.6.2/objs/: libfreetype.la
libs/lua-5.3.2/: Makefile
libs/lua-5.3.2/doc/: manual.html
libs/lua-5.3.2/src/: luaconf.h
libs/lua-cjson/: lua_cjson.c
libs/lua-socket/: luasocket-scm-0.rockspec  makefile
libs/lua-socket/doc/: reference.html  socket.html  tcp.html  udp.html
libs/lua-socket/src/: compat.c  compat.h  except.c  ftp.lua  http.lua  inet.c  makefile  select.c  serial.c  tcp.c  timeout.c  udp.c  unix.c
libs/lua-socket/test/: excepttest.lua  ftptest.lua  testclnt.lua  unixclnt.lua  unixsrvr.lua
libs/lua-zlib/: ioapi_mem.c  ioapi_mem.h  lua_zlib.c  unzip.c  unzip.h
libs/nanovg/src/: fontstash.h  nanovg.c  nanovg_gl.h
libs/nuklear/: nuklear.h  nuklear_glfw_gl3.h
luasrc/seal/: device.lua  event.lua  keyboard.lua  nanovg_node.lua  nfc.lua  nuk_node.lua  rect.lua  sprite.lua  sprite_frame.lua  stm.lua  timer.lua  util.lua
seal/: action.c  action.h  anim.c  anim.h  bmfont.c  bmfont.h  camera.c  camera.h  event.c  event.h  lua_handler.c  lua_handler.h  memory.c  memory.h  nuk_node.c  nuk_node.h  render.c  render.h  scheduler.c  scheduler.h  seal.c  seal.h  seal_base.h  shader.c  shader.h  spine_anim.c  spine_anim.h  sprite.c  sprite.h  sprite_batch.c  sprite_batch.h  texture.c  texture.h  ttf_font.c  ttf_font.h  util.h  vertex.h  window.c  window.h
seal/base/: array.c  array.h  array_map.c  array_map.h  hashmap.c  hashmap.h  list.h
seal/binding/: laction.c  laffine.c  lnanovg.c  lnuklear.c  lopen.c  lopen.h  lplatform.c  lsdl_image.c  lsdl_render.c  lsdl_texture.c  lsdl_ttf.c  lseal_core.c  lsprite.c  ltexture.c
seal/math/: affine.c  affine.h  geo.c  geo.h  matrix.c  matrix.h
seal/platform/: android_fs.c  android_platform.h  fs.c  fs.h  fs.m  fs_mac.mm  platform.c  platform.h  render_opengl.h  timer.c  timer.h  types.h
seal/platform/android/: android_gl.h  fs.c
seal/renders/: primitive_render.c  primitive_render.h  spine_render.c  spine_render.h  sprite_render.c  sprite_render.h
seal/tests/unit_test/: test.h  test_2d_array.c  test_array.c  test_array_map.c  test_hash_map.c
seal/ui/: bmfont.c  bmfont.h
tools/: build_free_type_ios_device.sh
tools/script_complier/: main.lua
(+111 files in other folders)
